# fwc_edu

./: .gitignore  MANIFEST.in  README.md  mygithub_key  mygithub_key.pub  pyproject.toml  requirements.txt  setup.py
fwc_edu/: hooks.py  modules.txt
fwc_edu/config/: desktop.py  docs.py
fwc_edu/fixtures/: custom_field.json
fwc_edu/fwc_education/: QSCupdate.py  api.py  update_qsc.py
fwc_edu/fwc_education/custom/: access_log.json  assessment_plan_criteria.json  assessment_result.json  assessment_result_detail.json  budget.json  company.json  employee.json  fee_structure.json  fees.json  file.json  journal_entry.json  payment_entry.json  payroll_entry.json  program.json  program_enrollment.json  purchase_invoice.json  purchase_invoice_item.json  purchase_order.json  purchase_order_item.json  salary_component.json  salary_detail.json  salary_slip.json  salary_structure_assignment.json  student.json  student_applicant.json  student_attendance.json  student_group.json
fwc_edu/fwc_education/desk_page/fwc/: fwc.json
fwc_edu/fwc_education/desk_page/fwc_education/: fwc_education.json
fwc_edu/fwc_education/doctype/additional_salary_detail/: additional_salary_detail.json  additional_salary_detail.py
fwc_edu/fwc_education/doctype/campus/: campus.js  campus.json  campus.py  test_campus.py
fwc_edu/fwc_education/doctype/cheques_details/: cheques_details.json  cheques_details.py
fwc_edu/fwc_education/doctype/denomination_table/: denomination_table.json  (+1 more)
fwc_edu/public/css/: fwc.bundle.css
fwc_edu/www/: index.html  report.html
fwc_edu/www/css/: style.css
(+129 files in other folders)
