[project]
name = "fwc_edu"                  # Must match your app folder name (hyphenated if needed, but usually snake_case)
version = "1.0.1"                 # Matches what you had earlier; can be dynamic later if preferred
description = "FWC Education custom app for Frappe"
requires-python = ">=3.10"        # Adjust based on your Frappe/Python version (v16 needs ~3.11+ or 3.12+)

dependencies = [
    "frappe",
    # Add any other direct Python deps your app needs, e.g. "requests~=2.31.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]  # Recommended for compatibility
build-backend = "setuptools.build_meta"
