[project]
name = "fwc-edu"                   # Hyphenated: this is the PyPI/dist name
version = "1.0.1"
description = "FWC Education custom Frappe app"
readme = "README.md"
requires-python = ">=3.14"         # Frappe v16 requires Python 3.14+
dependencies = [
    "frappe",
    "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2",
    "gunicorn @ git+https://github.com/frappe/gunicorn@bb554053bb87218120d76ab6676af7015680e8b6",
    # Add your other direct deps here if any
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Optional but recommended for Frappe apps
[tool.setuptools.packages.find]
where = ["."]
include = ["fwc_edu*"]             # This tells setuptools to find the package as fwc_edu (underscore)
